--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 <p>Localizada no coração da Av. Raposo Tavares n* 1888💈 Barbearia El Gringo's traz para o mercado o que há de melhor para o seu cabelo e barba. Fundada em 2022, a Barbearia El Gringo's já é destaque na cidade e conquista novos clientes a cada dia. Nossa missão é: "Proporcionar autoestima e qualidade de vida aos clientes". Oferecemos profissionais experientes e antenados às mudanças no mundo da moda. O atendimento possui padrão de excelência e agilidade, garantindo qualidade e satisfação dos nossos clientes.</p>
             </div>
             <div class="img-cozinha">
-                <img src="./img/cardapio BARBER.jpeg" alt="">
+                <img src="./img/cardapio-oficial.jpeg" alt="">
             </div>
         </div>
     </section>
